--- a/src/css/colors/colors-black-sabbath.css
+++ b/src/css/colors/colors-black-sabbath.css
@@ -20,7 +20,7 @@
 		--menu-input-background-color: #1c1c1c;
 		--menu-item-hovered: #d8d8d8;
 
-		--menu-border-strong: 1px solid #484848;
+		--menu-border-strong: #484848;
 		--menu-separator-strong: #484848;
 		--menu-separator-medium: #444444;
 		--menu-separator-soft: #383838;
