--- a/src/css/colors/colors-white-stripes.css
+++ b/src/css/colors/colors-white-stripes.css
@@ -23,7 +23,7 @@
 	--menu-separator-medium: #555;
 	--menu-separator-soft: #444;
 
-	--menu-border-strong: 1px solid #666;
+	--menu-border-strong: #666;
 
 	--player-loading-spinner-url: url(/static/img/vrtelejka-333.gif);
 
