--- a/src/css/1-components/content.css
+++ b/src/css/1-components/content.css
@@ -1,4 +1,5 @@
 .content .content-heading {
+	border-bottom: 1px solid;
 	border-bottom-right-radius: 24px;
 	overflow: hidden;
 	padding: 0 15px 6px 3px;
