readjusted flag dimensions again

--- a/src/css/1-components/menu.css
+++ b/src/css/1-components/menu.css
@@ -34,7 +34,7 @@
 	background: url(img/znamena.svg) no-repeat;
 	border-radius: 3px;
 	display: inline-block;
-	height: 1em;
+	height: 18px;
 	width: 24px;
 }
 
