--- a/src/css/3-screens/4-m.css
+++ b/src/css/3-screens/4-m.css
@@ -36,14 +36,12 @@
 
 
 /*============== Logo ==============*/
-	.header-container .logo-text, .header-container .logo {
-		display: inline-block;
-	}
-
 	.header-container .logo {
 		border-radius: 90px;
+		display: inline-block;
 		height: 150px;
 		margin: -12px 20px 0;
+		min-width: 156px;
 		order: 4;
 		overflow: hidden;
 		padding: 5px;
@@ -58,6 +56,7 @@
 	.header-container .logo-text {
 		align-items: center;
 		display: flex;
+		flex: auto;
 		font-size: 3.6em;
 		height: 124px;
 		width: 175px;
@@ -65,13 +64,11 @@
 
 	.header-container .logo-text-left {
 		justify-content: flex-end;
-		margin-left: auto;
 		order: 3;
 	}
 
 	.header-container .logo-text-right {
 		justify-content: flex-start;
-		margin-right: auto;
 		order: 5;
 	}
 
@@ -152,7 +149,7 @@
 @media screen and (min-width: 48em) and (max-width: 63.99em) {
 /*============== Buttons ==============*/
 	.toggle-language-wrapper {display: none;}
-	.header-button {margin: 0 20px;}
+	.header-button {width: 80px;}
 
 	.header-button .fa-chevron-down,
 	.header-button .fa-chevron-up {
