--- a/src/css/3-screens/4-m.css
+++ b/src/css/3-screens/4-m.css
@@ -83,6 +83,8 @@
 		width: auto;
 	}
 
+	.toggle-theme-wrapper .header-button .fa-lightbulb {font-size: 0.9em;}
+
 /*============== Breadcrumbs ==============*/
 	.breadcrumbs {
 		margin: 0 auto;
