--- a/src/css/3-screens/4-m.css
+++ b/src/css/3-screens/4-m.css
@@ -1,7 +1,11 @@
 /**********************************************************************************
  * M sized screen - Tablet or larger
  **********************************************************************************/
-@media screen and (min-width: 48em) {
+@media
+	screen and (min-width: 58em),
+	screen and (min-width: 48em) and (pointer: fine) and (hover),
+	screen and (min-width: 48em) and (pointer: coarse) and (orientation: portrait)
+{
 /*============== Ajax spinner ==============*/
 	.ajax-loader {
 		border-radius: 24px;
@@ -83,6 +87,12 @@
 		width: auto;
 	}
 
+	/* The oposite could have been a "Negative S" rule, but there is one in the base and one here because of legacy browsers */
+	.header-button > .fa-chevron-down,
+	.header-button > .fa-chevron-up {
+		display: inline-block;
+	}
+
 	.toggle-theme-wrapper .header-button .fa-lightbulb {font-size: 0.9em;}
 
 /*============== Breadcrumbs ==============*/
@@ -148,7 +158,11 @@
 /**********************************************************************************
  * ONLY M
  **********************************************************************************/
-@media screen and (min-width: 48em) and (max-width: 63.99em) {
+@media
+	screen and (min-width: 58em) and (max-width: 63.99em),
+	screen and (min-width: 48em) and (max-width: 63.99em) and (pointer: fine) and (hover),
+	screen and (min-width: 48em) and (max-width: 63.99em) and (pointer: coarse) and (orientation: portrait)
+{
 /*============== Buttons ==============*/
 	.toggle-language-wrapper {display: none;}
 	.header-button {width: 80px;}
@@ -194,6 +208,4 @@
 
 	.menu-language-choice li .menu-item .icon {margin: 0;}
 	.menu-language-choice .language-label {display: none;}
-
-
 }
