added titles to the info links in the playlist

--- a/src/py/main/templates/main/__root.html
+++ b/src/py/main/templates/main/__root.html
@@ -47,6 +47,7 @@
 			];
 			MESSAGES = {
 				errorLoadingTrack: '{% trans "Cannot load this song!" %}',
+				detailsAbout: '{% trans "Details about" %}',
 				loading: "{% trans 'Loading...' %}",
 				newLanguageWillInterruptMusic: "{% trans 'Changing the language will interrupt music playback. Continue?' %}"
 			};
