changed the non-links in the top menus to <span>

--- a/src/py/main/templates/main/__root.html
+++ b/src/py/main/templates/main/__root.html
@@ -107,24 +107,24 @@
 						<ul>
 
 							<li>
-								<a class="menu-item" onclick="Theme.select(undefined);">
+								<span class="menu-item" onclick="Theme.select(undefined);">
 									<i class="icon fas fa-desktop"></i>
 									{% trans "Device Default" %}
-								</a>
+								</span>
 							</li>
 
 							<li>
-								<a class="menu-item" onclick="Theme.select(0)">
+								<span class="menu-item" onclick="Theme.select(0)">
 									<i class="icon fas fa-sun"></i>
 									{% trans "Bright" %}
-								</a>
+								</span>
 							</li>
 
 							<li>
-								<a class="menu-item" onclick="Theme.select(1)">
+								<span class="menu-item" onclick="Theme.select(1)">
 									<i class="icon fas fa-moon"></i>
 									{% trans "Dark" %}
-								</a>
+								</span>
 							</li>
 
 						</ul>
@@ -162,11 +162,11 @@
 								</a>
 							</li>
 							<li>
-								<a id="music-button" class="menu-item" aria-label="{% trans 'Go to discography page' %}">
+								<span id="music-button" class="menu-item" aria-label="{% trans 'Go to discography page' %}">
 									<i class="icon fas fa-music"></i>
 									{% trans "Music" %}
 									<i class="fas fa-chevron-down"></i>
-								</a>
+								</span>
 							</li>
 						</ul>
 
