slightly adjusted the spacing of the breadcrumbs and the album track list

--- a/src/css/1-components/breadcrumbs.css
+++ b/src/css/1-components/breadcrumbs.css
@@ -7,4 +7,4 @@
 }
 .breadcrumbs li {display: inline-block;}
 .breadcrumbs li:not(:first-child)::before {content: " / ";}
-.breadcrumbs li .fas {padding-right: 4px;}
+.breadcrumbs li .fas {padding: 0 5px 0 1px;}
