--- a/src/css/3-screens/1-xxs.css
+++ b/src/css/3-screens/1-xxs.css
@@ -16,6 +16,9 @@ screen and (max-width: 20.1em) and (orientation: landscape) {
 
 	.button-scroll-to-top {display: none;}
 
+/*============== Breadcrumbs ==============*/
+	.breadcrumbs a, .breadcrumbs span {margin: 2px 4px;}
+
 /*============== Logo ==============*/
 	.header-container .logo {
 		border-bottom: 1px solid;
