--- a/src/py/music/templates/music/discography.html
+++ b/src/py/music/templates/music/discography.html
@@ -8,17 +8,21 @@
 	<nav class="breadcrumbs" aria-label="breadcrumbs">
 		<ul>
 			<li>
-				<span><a href="/{% trans 'home/' %}"><i class="icon fas fa-home"></i>{% trans 'Home' %}</a></span>
+				<a href="/{% trans 'home/' %}"><i class="icon fas fa-home"></i>{% trans 'Home' %}</a>
 			</li>
 
 			{% if not page.single_album %}
-				<li><i class="fas fa-music"></i>{% trans 'Music' %}</li>
+				<li>
+					<span><i class="fas fa-music"></i>{% trans 'Music' %}</span>
+				</li>
 			{% else %}
 				<li>
-					<span><a href="/{% trans 'music/' %}"><i class="icon fas fa-music"></i>{% trans 'Music' %}</a></span>
+					<a href="/{% trans 'music/' %}"><i class="icon fas fa-music"></i>{% trans 'Music' %}</a>
 				</li>
 
-				<li><i class="fas fa-compact-disc"></i>{{ page.title }}</li>
+				<li>
+					<span><i class="fas fa-compact-disc"></i>{{ page.title }}</span>
+				</li>
 			{% endif %}
 
 		</ul>
