updated the disclaimer agreement

--- a/src/py/music/templates/music/discography.html
+++ b/src/py/music/templates/music/discography.html
@@ -48,7 +48,7 @@
 		<p class="license-notice">
 			<small>
 			{% blocktrans trimmed %}
-				All music is composed by Димозавър (Dimmu Saurus), except where noted. Download, play and share to help him become famous. Dimmu Saurus is not responsible for any damage to your speakers, house or trouble with neighbours which may result in playing his music too loud.
+				All music is composed by Димозавър (Dimmu Saurus), except where noted. Download, play and share to help him take over Earth and Mars. Dimmu Saurus is not responsible for any damage to your speakers, house or trouble with neighbours which may result in playing his music too loud.
 			{% endblocktrans %}
 			</small>
 		</p>
