--- a/src/css/0-base/base.css
+++ b/src/css/0-base/base.css
@@ -1,7 +1,11 @@
 /**********************************************************************************
  * Reset HTML styles
  **********************************************************************************/
-body {font-family: "Noto Sans", sans-serif;}
+body {
+	font-family: "Noto Sans", sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
 h2, h3, h4, h5, h6 {text-align: left;}
 header .logo-text {font-family: 'Griffy', cursive;}
 hr {
